# adaptive-spectral-message-passing-for-molecular-scaffold-learning

./: .gitignore  IMPROVEMENTS_SUMMARY.md  README.md  mlflow.db  pyproject.toml  requirements.txt  test_pipeline.py
checkpoints_quick/: best_model.pt  final_model.pt
configs/: ablation.yaml  default.yaml  quick_test.yaml
data/: .gitkeep
results/: .gitkeep  results.json  test_metrics.csv  test_metrics.json  test_predictions.csv
results_quick/: training_history.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/: __init__.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/cli/: evaluate.py  predict.py  train.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/models/: __init__.py  components.py  model.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/training/: __init__.py  trainer.py
src/adaptive_spectral_message_passing_for_molecular_scaffold_learning/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
