[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-spectral-message-passing-for-molecular-scaffold-learning"
version = "0.1.0"
description = "Molecular property prediction using adaptive spectral graph convolutions with scaffold-aware curriculum learning"
authors = [{name = "Alireza Shojaei"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "networkx>=3.0",
    "deepchem>=2.7.0",
    "rdkit>=2023.3.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.7.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
asmps-train = "adaptive_spectral_message_passing_for_molecular_scaffold_learning.cli.train:main"
asmps-evaluate = "adaptive_spectral_message_passing_for_molecular_scaffold_learning.cli.evaluate:main"
asmps-predict = "adaptive_spectral_message_passing_for_molecular_scaffold_learning.cli.predict:main"

[tool.setuptools]
packages = ["adaptive_spectral_message_passing_for_molecular_scaffold_learning"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
